--- a/Week1/Problems/helloNumpy.ipynb
+++ b/Week1/Problems/helloNumpy.ipynb
@@ -111,7 +111,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 7. Padding of numpy arrays\n"
+    "# 7. Padding of numpy arrays\n",
+    "#---------------------------------------------------------------------------------------------------------------------------\n",
+    "# Create a sample 2D numpy array\n",
+    "array = np.array([[1, 2, 3],\n",
+    "                  [4, 5, 6],\n",
+    "                  [7, 8, 9]])\n",
+    "#---------------------------------------------------------------------------------------------------------------------------\n",
+    "# Padding with a constant value 0 and print array \n",
+    "\n",
+    "\n",
+    "\n",
+    "#---------------------------------------------------------------------------------------------------------------------------\n",
+    "# Padding with edge values (replicating the edge values) and print array \n",
+    "\n",
+    "\n",
+    "\n",
+    "#---------------------------------------------------------------------------------------------------------------------------\n",
+    "# Symmetric padding (mirroring along the edges) and print array \n",
+    "\n",
+    "\n",
+    "\n",
+    "#---------------------------------------------------------------------------------------------------------------------------\n",
+    "# Uneven padding (different padding on each side) -- pad_width=((1, 2), (2, 3)) and print array \n",
+    "\n",
+    "\n"
    ]
   },
   {
