Week1-numpy-final

--- a/Week1/Problems/helloNumpy.ipynb
+++ b/Week1/Problems/helloNumpy.ipynb
@@ -23,7 +23,8 @@
    "outputs": [],
    "source": [
     "!pip install pillow\n",
-    "!pip install numpy"
+    "!pip install numpy\n",
+    "!pip install scipy"
    ]
   },
   {
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,16 +108,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[58 67 16 32 37 55 75 62  5 53]\n"
+     ]
+    }
+   ],
    "source": [
     "# 7. Padding of numpy arrays\n",
     "#---------------------------------------------------------------------------------------------------------------------------\n",
     "# Create a sample 2D numpy array\n",
-    "array = np.array([[1, 2, 3],\n",
-    "                  [4, 5, 6],\n",
-    "                  [7, 8, 9]])\n",
+    "array = np.array([[1, 2, 3],[4, 5, 6],[7, 8, 9]])\n",
     "#---------------------------------------------------------------------------------------------------------------------------\n",
     "# Padding with a constant value 0 and print array \n",
     "\n",
@@ -135,16 +142,22 @@
     "#---------------------------------------------------------------------------------------------------------------------------\n",
     "# Uneven padding (different padding on each side) -- pad_width=((1, 2), (2, 3)) and print array \n",
     "\n",
+    "\n",
+    "\n",
+    "#---------------------------------------------------------------------------------------------------------------------------\n",
+    "# 8. For the following array form array filtering and give new array if all elements in the new array should be divisible by 2\n",
+    "array = np.random.randint(100,size=(10))\n",
+    "print(array)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 8. Apply a filter (edge detection using convolution) (using scipy)\n",
+    "# 9. Apply a filter (edge detection using convolution) (using scipy)\n",
     "# Perform convolution using numpy (assumes a padding or cropped output for simplicity)\n",
     "from scipy.signal import convolve2d\n",
     "\n",
