--- a/Week1/Problems/Image_Processing.ipynb
+++ b/Week1/Problems/Image_Processing.ipynb
@@ -5,12 +5,12 @@
    "metadata": {},
    "source": [
     "# Image Processing using OpenCV\n",
-    "In this assignment we will learn how to process images using OpenCV"
+    "In this assignment we will learn how to process images using OpenCV. We more or less covered functions which will be useful in Computer Vision projects in general. Also added small questions for revision of OpenCV functions. Happy Learning :)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,18 +19,175 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Image transformations using OpenCV"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot the frequency vs pixel value graph (y vs x) and show the graph\n",
+    "#----------------------------------------------------------------------------------------------------------------------------------\n",
+    "# 1. Plot the frequency vs pixel value graph (y vs x) and show the graph\n",
     "\n",
     "\n",
     "\n",
-    "# Convert the given image into black and white image and show the image\n",
     "\n",
-    "\n"
+    "#----------------------------------------------------------------------------------------------------------------------------------\n",
+    "# 2. Convert the given image into black and white image and show the image\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#----------------------------------------------------------------------------------------------------------------------------------\n",
+    "# 3. Perform any two arithmetic operations on the images __________________ and show the result\n",
+    "# Performing such operations is also know as blending of images\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#----------------------------------------------------------------------------------------------------------------------------------\n",
+    "# 4. Crop the image and show the result of having only the face\n",
+    "\n",
+    "\n",
+    "\n",
+    "#----------------------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Detecting elements in images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#----------------------------------------------------------------------------------------------------------------------------------\n",
+    "# 5. In the given image _______, detect circles which have radius between 1-10 pixels\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#----------------------------------------------------------------------------------------------------------------------------------\n",
+    "# 6. In the image used above, detect corners in the image. You can learn them from here '___'\n",
+    "\n",
+    "\n",
+    "\n",
+    "#----------------------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Learning about kernels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#----------------------------------------------------------------------------------------------------------------------------------\n",
+    "# 7. Build your own gaussian kernel\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#----------------------------------------------------------------------------------------------------------------------------------\n",
+    "# 8. Using the gaussian kernel built above, smooth the image\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#----------------------------------------------------------------------------------------------------------------------------------\n",
+    "# 9. Build some other type of kernel and smooth the image\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#----------------------------------------------------------------------------------------------------------------------------------\n",
+    "# 10. Show what happens if we use two gaussian kernels on an image\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#---------------------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Writing on images and Filtering them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#---------------------------------------------------------------------------------------------------------------------------------\n",
+    "# 11. Write code to draw a rectangle around girl's face in the swing\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#---------------------------------------------------------------------------------------------------------------------------------\n",
+    "# 12. Also Write text above the top side of above rectangle and show the new image\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#---------------------------------------------------------------------------------------------------------------------------------\n",
+    "# 13. Using a 2D filter on images \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#---------------------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Video functionalities in OpenCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#---------------------------------------------------------------------------------------------------------------------------------\n",
+    "# 14. Capture the current live video of 5 sec using your laptop front camera\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#---------------------------------------------------------------------------------------------------------------------------------\n",
+    "# 15. Also extract an image at a moment from the taken video using time frames\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#---------------------------------------------------------------------------------------------------------------------------------"
    ]
   }
  ],
