--- a/Week1/Problems/Image_Processing.ipynb
+++ b/Week1/Problems/Image_Processing.ipynb
@@ -27,24 +27,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#----------------------------------------------------------------------------------------------------------------------------------\n",
-    "# 1. Plot the frequency vs pixel value graph (y vs x) and show the graph\n",
+    "# 1. Plot the frequency vs pixel value graph (y vs x) and show the graph for 'the-swing.webp' image\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "#----------------------------------------------------------------------------------------------------------------------------------\n",
-    "# 2. Convert the given image into black and white image and show the image\n",
+    "# 2. Convert the 'mixed_image.jpg' image into black and white using OpenCV and show the image\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "#----------------------------------------------------------------------------------------------------------------------------------\n",
-    "# 3. Perform any two arithmetic operations on the images __________________ and show the result\n",
+    "# 3. Perform any two arithmetic operations on the images 'eye_image.avif' and 'image2.jpeg' and show the result\n",
     "# Performing such operations is also know as blending of images\n",
     "\n",
     "\n",
@@ -52,7 +52,8 @@
     "\n",
     "\n",
     "#----------------------------------------------------------------------------------------------------------------------------------\n",
-    "# 4. Crop the image and show the result of having only the face\n",
+    "# 4. Crop the image 'the-swing.webp' and show the result of having only the face of the girl\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -68,18 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#----------------------------------------------------------------------------------------------------------------------------------\n",
-    "# 5. In the given image _______, detect circles which have radius between 1-10 pixels\n",
+    "# 5. In the given 'eye_image.avif' image detect circles which have radius between 1-10 pixels\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "#----------------------------------------------------------------------------------------------------------------------------------\n",
-    "# 6. In the image used above, detect corners in the image. You can learn them from here '___'\n",
+    "# 6. In the image 'smoothing.jpg', detect corners in the image. You can try them from here 'https://stackoverflow.com/questions/7263621/how-to-find-corners-on-a-image-using-opencv' too.\n",
     "\n",
     "\n",
     "\n",
@@ -95,30 +96,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#----------------------------------------------------------------------------------------------------------------------------------\n",
-    "# 7. Build your own gaussian kernel\n",
+    "# 7. Build your own gaussian kernel and learn why kernels are important\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "#----------------------------------------------------------------------------------------------------------------------------------\n",
-    "# 8. Using the gaussian kernel built above, smooth the image\n",
+    "# 8. Using the gaussian kernel built above, smooth the image 'smoothing.jpg'\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "#----------------------------------------------------------------------------------------------------------------------------------\n",
-    "# 9. Build some other type of kernel and smooth the image\n",
+    "# 9. Build some other type of kernel and smooth the image 'smoothing.jpg'\n",
     "\n",
     "\n",
     "\n",
     "\n",
     "#----------------------------------------------------------------------------------------------------------------------------------\n",
-    "# 10. Show what happens if we use two gaussian kernels on an image\n",
+    "# 10. Show what happens if we use two gaussian kernels on an image 'smoothing.jpg'\n",
     "\n",
     "\n",
     "\n",
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +155,7 @@
     "\n",
     "\n",
     "#---------------------------------------------------------------------------------------------------------------------------------\n",
-    "# 13. Using a 2D filter on images \n",
+    "# 13. Using a 2D filter on the image 'image2.jpeg'\n",
     "\n",
     "\n",
     "\n",
