--- a/Week1/Problems/helloNumpy.ipynb
+++ b/Week1/Problems/helloNumpy.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
     "import numpy as np  # Numpy for array operations\n",
     "\n",
     "# Load the image \n",
-    "image = Image.open(\"the-swing.webp\")\n",
+    "image = Image.open(\"./../images/the-swing.webp\")\n",
     "\n",
     "# Convert the image to a gray scale and then to a numpy array and print first 5 rows\n",
     "# Print the shape of the array\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,14 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[24 16 22 68 76 73  5 34 31 14]\n"
+      "[26 73 37 28 33 90 49 71  4  5]\n"
      ]
     }
    ],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
