--- a/Week1/Problems/Image_Processing.ipynb
+++ b/Week1/Problems/Image_Processing.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "\n",
     "#----------------------------------------------------------------------------------------------------------------------------------\n",
-    "# 3. Perform any two arithmetic operations on the images 'eye_image.avif' and 'image2.jpeg' and show the result\n",
+    "# 3. Perform any two arithmetic operations on the images 'eye_image.jpg' and 'image2.jpeg' and show the result\n",
     "# Performing such operations is also know as blending of images\n",
     "\n",
     "\n",
@@ -74,7 +74,7 @@
    "outputs": [],
    "source": [
     "#----------------------------------------------------------------------------------------------------------------------------------\n",
-    "# 5. In the given 'eye_image.avif' image detect circles which have radius between 1-10 pixels\n",
+    "# 5. In the given 'eye_image.jpg' image detect circles which have radius between 1-10 pixels\n",
     "\n",
     "\n",
     "\n",
