--- a/Week3/Problems/facial_detection.ipynb
+++ b/Week3/Problems/facial_detection.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Test the model and print accuracy"
+    "# TODO: Test the model and print the accuracy"
    ]
   }
  ],
