--- a/Week3/Problems/real_time_detection.ipynb
+++ b/Week3/Problems/real_time_detection.ipynb
@@ -85,7 +85,7 @@
     "# TODO:Release video capture and close windows\n",
     "cap.release()\n",
     "cv2.destroyAllWindows()\n",
-    "print(\"[INFO] Frame sampling ended.\")"
+    "print(\"[INFO] Frame sampling has ended.\")"
    ]
   }
  ],
