--- a/Week3/Problems/Fine_tuning.ipynb
+++ b/Week3/Problems/Fine_tuning.ipynb
@@ -1,43 +1,32 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "gpuType": "T4"
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "4kESsOo4IUhc"
+      },
       "source": [
         "# **Assignment 3**\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "4kESsOo4IUhc"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Fine-tuning a Pretrained ResNet Model for Image Classification"
-      ],
       "metadata": {
         "id": "deWESXcqELuB"
-      }
+      },
+      "source": [
+        "##Fine-tuning a Pretrained ResNet Model for Image Classification"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "HBkG5ZRUJB_H"
+      },
+      "outputs": [],
       "source": [
         "import torch\n",
         "import torch.nn as nn\n",
@@ -49,15 +38,15 @@
         "import numpy as np\n",
         "import time\n",
         "import os"
-      ],
-      "metadata": {
-        "id": "HBkG5ZRUJB_H"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "FXXZ9uIlJB7r"
+      },
+      "outputs": [],
       "source": [
         "# Check if CUDA is available\n",
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
@@ -78,15 +67,13 @@
         "    transforms.ToTensor(),\n",
         "    transforms.Normalize((0.485, 0.456, 0.406), (0.229, 0.224, 0.225)),\n",
         "])"
-      ],
-      "metadata": {
-        "id": "FXXZ9uIlJB7r"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "l7gK-ROOOhcq"
+      },
       "source": [
         "<style>\n",
         "blue {\n",
@@ -102,33 +89,35 @@
         "}\n",
         "</style>\n",
         "\n",
-        "1) This code outlines loading the <blue>**Cifar-10**</blue> dataset for <green>**image classification**</green>.\n",
+        "1) This code outlines loading the <blue>**Caltech-256**</blue> dataset for <green>**image classification**</green>.\n",
         "2) The <blue>**train_loader**</blue> and <blue>**test_loader**</blue> are used to load the datasets in batches of 32, with shuffling applied only to the training set.\n",
         "\n",
         "Note: The placeholders **\"None\"** need to be replaced with the correct dataset-loading code."
-      ],
-      "metadata": {
-        "id": "l7gK-ROOOhcq"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "OfNQGf5pJB5g"
+      },
+      "outputs": [],
       "source": [
-        "# TODO: Use Cifar-10 dataset, you can download and load it through torchvision.datasets.ImageFolder\n",
+        "# TODO: Use Caltech-256 dataset, you can download and load it through torchvision.datasets.ImageFolder\n",
         "train_dataset = None  # Replace None with code to load the dataset with training transformations defined above\n",
         "test_dataset = None  # Replace None with code to load the dataset with test transformations defined above\n",
         "\n",
         "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True, num_workers=4)\n",
         "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False, num_workers=4)"
-      ],
-      "metadata": {
-        "id": "OfNQGf5pJB5g"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ReKw2eBrJB3Y"
+      },
+      "outputs": [],
       "source": [
         "# TODO: Replace None with correct code for loading a pretrained Resnet-18 model\n",
         "model = None\n",
@@ -140,16 +129,16 @@
         "\n",
         "# Modify the final fully connected layer\n",
         "num_ftrs = model.fc.in_features\n",
-        "model.fc = nn.Linear(num_ftrs, 10)  # 10 classes in Cifar-10"
-      ],
-      "metadata": {
-        "id": "ReKw2eBrJB3Y"
-      },
-      "execution_count": null,
-      "outputs": []
+        "model.fc = nn.Linear(num_ftrs, 257)  # 257 classes in Caltech-256"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "klvVyDfFJB1Q"
+      },
+      "outputs": [],
       "source": [
         "# TODO: Replace None with correct code to send model to device\n",
         "model = None\n",
@@ -158,15 +147,15 @@
         "# TODO: Use a suitable loss criterion and optimizer with learning rate 0.001\n",
         "criterion = None\n",
         "optimizer = None"
-      ],
-      "metadata": {
-        "id": "klvVyDfFJB1Q"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "PLy1_IxHJBy4"
+      },
+      "outputs": [],
       "source": [
         "# Train and evaluate the model\n",
         "def train_model(model, criterion, optimizer, num_epochs=10):\n",
@@ -222,15 +211,15 @@
         "\n",
         "# Fine-tune the model\n",
         "fine_tuned_model = train_model(model, criterion, optimizer, num_epochs=5)"
-      ],
-      "metadata": {
-        "id": "PLy1_IxHJBy4"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "0GigVXjcJBwU"
+      },
+      "outputs": [],
       "source": [
         "# Evaluate the performance of the model before and after fine-tuning\n",
         "# Function to visualize images and their predictions\n",
@@ -282,15 +271,15 @@
         "        classes_dict[index] = name\n",
         "\n",
         "    return classes_dict"
-      ],
-      "metadata": {
-        "id": "0GigVXjcJBwU"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Fyr46qoDJBtI"
+      },
+      "outputs": [],
       "source": [
         "# Function to compare predictions of non-finetuned and finetuned models\n",
         "def compare_predictions(pretrained_model, finetuned_model, dataloader, path_dir, num_images=5):\n",
@@ -337,34 +326,45 @@
         "                plt.axis('off')\n",
         "\n",
         "                plt.show()"
-      ],
-      "metadata": {
-        "id": "Fyr46qoDJBtI"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "QEOf8HQ7JBqv"
+      },
+      "outputs": [],
       "source": [
         "# Evaluate and visualize predictions\n",
         "print(\"Comparing predictions of pre-trained and fine-tuned models on example images...\")\n",
         "\n",
         "# Ensure both models have the same structure (so, freeze layers for pretrained_model)\n",
         "pretrained_model = models.resnet18(pretrained=True)\n",
-        "pretrained_model.fc = nn.Linear(pretrained_model.fc.in_features, 10)\n",
+        "pretrained_model.fc = nn.Linear(pretrained_model.fc.in_features, 257)\n",
         "pretrained_model = pretrained_model.to(device)\n",
         "\n",
         "# Compare predictions using a couple of test images\n",
         "# TODO: Fill in the path of the 256_ObjectCategories directory in the path variable below.\n",
         "path_to256_ObjectCategories_dir = None\n",
         "compare_predictions(pretrained_model, fine_tuned_model, test_loader, path_to256_ObjectCategories_dir ,num_images=10)\n"
-      ],
-      "metadata": {
-        "id": "QEOf8HQ7JBqv"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
